<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/first_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="5"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="parent">

        <Button
            android:id="@+id/bt_remove_last"
            style="@style/Button.Operator"
            android:layout_weight="1"
            android:background="@drawable/button_result"
            android:foreground="@drawable/button_background_transparent"
            android:text="CE"
            android:textSize="22sp" />

        <Button
            android:id="@+id/bt_clear"
            style="@style/Button.Operator"
            android:layout_weight="1"
            android:background="@drawable/button_result"
            android:foreground="@drawable/button_background_transparent"
            android:text="C"
            android:textSize="22sp" />

        <Button
            android:id="@+id/bt_parenthesis_start"
            style="@style/Button"
            android:layout_weight="1"
            android:tag="("
            android:text="(" />

        <Button
            android:id="@+id/bt_parenthesis_end"
            style="@style/Button"
            android:layout_weight="1"
            android:tag=")"
            android:text=")" />

        <Button
            android:id="@+id/bt_division"
            style="@style/Button.Operator"
            android:layout_weight="1"
            android:tag="/"
            android:text="÷" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/second_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="5"
        app:layout_constraintTop_toBottomOf="@+id/first_row">

        <Button
            android:id="@+id/bt7"
            style="@style/Button"
            android:layout_weight="1"
            android:tag="7"
            android:text="7" />

        <Button
            android:id="@+id/bt8"
            style="@style/Button"
            android:layout_weight="1"
            android:tag="8"
            android:text="8" />

        <Button
            android:id="@+id/bt9"
            style="@style/Button"
            android:layout_weight="1"
            android:tag="9"
            android:text="9" />

        <Button
            android:id="@+id/bt_exponentiation"
            style="@style/Button.Operator"
            android:layout_weight="1"
            android:tag="^"
            android:text="^" />

        <Button
            android:id="@+id/bt_multiplication"
            style="@style/Button.Operator"
            android:layout_weight="1"
            android:tag="x"
            android:text="✕" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/third_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="5"
        app:layout_constraintTop_toBottomOf="@+id/second_row">

        <Button
            android:id="@+id/bt4"
            style="@style/Button"
            android:layout_weight="1"
            android:tag="4"
            android:text="4" />

        <Button
            android:id="@+id/bt5"
            style="@style/Button"
            android:layout_weight="1"
            android:tag="5"
            android:text="5" />

        <Button
            android:id="@+id/bt6"
            style="@style/Button"
            android:layout_weight="1"
            android:tag="6"
            android:text="6" />

        <Button
            android:id="@+id/bt_square_root"
            style="@style/Button.Operator"
            android:layout_weight="1"
            android:tag="r"
            android:text="√" />

        <Button
            android:id="@+id/bt_subtraction"
            style="@style/Button.Operator"
            android:layout_weight="1"
            android:tag="-"
            android:text="-" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/four_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="5"
        app:layout_constraintTop_toBottomOf="@+id/third_row">

        <Button
            android:id="@+id/bt1"
            style="@style/Button"
            android:layout_weight="1"
            android:tag="1"
            android:text="1" />

        <Button
            android:id="@+id/bt2"
            style="@style/Button"
            android:layout_weight="1"
            android:tag="2"
            android:text="2" />

        <Button
            android:id="@+id/bt3"
            style="@style/Button"
            android:layout_weight="1"
            android:tag="3"
            android:text="3" />

        <Button
            android:id="@+id/bt_factorial"
            style="@style/Button.Operator"
            android:layout_weight="1"
            android:tag="f"
            android:text="n!"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/bt_addition"
            style="@style/Button.Operator"
            android:layout_weight="1"
            android:tag="+"
            android:text="+" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/five_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="5"
        app:layout_constraintTop_toBottomOf="@+id/four_row">

        <Button
            android:id="@+id/bt0"
            style="@style/Button"
            android:layout_weight="1"
            android:tag="0"
            android:text="0" />

        <Button
            android:id="@+id/bt00"
            style="@style/Button"
            android:layout_weight="1"
            android:tag="00"
            android:text="00" />

        <Button
            android:id="@+id/bt_dot"
            style="@style/Button"
            android:layout_weight="1"
            android:tag="."
            android:text="." />

        <Button
            android:id="@+id/bt_equal"
            style="@style/Button.Operator"
            android:layout_width="112dp"
            android:layout_weight="2"
            android:background="@drawable/button_result"
            android:foreground="@drawable/button_background_transparent"
            android:text="=" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>