<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/result_screen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/calculator"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:weightSum="2">

        <TextView
            android:id="@+id/operations"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.75"
            android:gravity="center"
            android:padding="15dp"
            android:textColor="@color/colorAccent"
            android:textSize="16sp" />

        <TextSwitcher
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.25"
            android:padding="15dp" />
    </LinearLayout>

    <include
        android:id="@+id/calculator"
        layout="@layout/element_math_calculator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" />
</RelativeLayout>